<resources>
    <string name="app_name">CSIS3175Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Find your inner meme</string>
    <string name="menu_favorite">Your inner meme</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="action_time">Time</string>
    <string name="action_viral">Viral</string>
    <string name="action_top">Top</string>
    <string name="btnSaveTxt">Download</string>
    <string name="btnShareTxt">Share</string>
</resources>
