<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_meme_list">

    <fragment
        android:id="@+id/nav_meme_list"
        android:name="com.example.csis3175project.ui.MemeList.MemeListFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_meme_list" >
        <action
            android:id="@+id/onMemeClick"
            app:destination="@id/memeFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.csis3175project.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.csis3175project.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.csis3175project.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.csis3175project.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.csis3175project.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/memeFragment"
        android:name="com.example.csis3175project.ui.Meme.MemeFragment"
        android:label="fragment_meme"
        tools:layout="@layout/fragment_meme" />
</navigation>